# usda_cropland_data

./: .gitignore  Makefile  README.md  pyproject.toml
product/: README.md
scripts/: publish.sh
src/usda_cdl/: __init__.py  catalog.py  cdl_classes.json  cli.py  config.py  download.py  ingest.py  metadata.py  publish.py  store.py  template.py  validate.py
tests/: conftest.py  test_catalog.py  test_end_to_end.py  test_metadata.py  test_publish.py  test_store.py
